refactor: 去除 DBCP2 数据库连接池，使用 HikariCP